chore(dist): replace G1 config & handle other gc options (#2664)